--- a/src/style/components/_modal.scss
+++ b/src/style/components/_modal.scss
@@ -11,16 +11,19 @@
     // ---------- ボタン部分 ----------
     // .modal__openButton {}
 
-    .modal__button__text {
-      @include g.visibilityHidden();
-    }
-
-    // ---------- 本体部分 ----------
-    // .modal__body {
+    // .modal__button__text {
+    //   @include g.visibilityHidden();
     // }
 
+    // ---------- 本体部分 ----------
+    .modal__body.-from-show,
+    .modal__body.-to-hide {
+      opacity: 1;
+    }
+
     // ---------- 透過背景 ----------
-    .modal__overlay {
+    .modal__overlay,
+    .modalOld__overlay {
       background: rgba(0, 0, 0, 0.8);
       position: fixed;
       top: 0;
