不要な記述を削除

--- a/src/pages/dev/components/index.astro
+++ b/src/pages/dev/components/index.astro
@@ -397,7 +397,7 @@ import TextTransition from '@src/components/parts/TextTransition.astro';
         text="Carousel コンポーネント"
       />
 
-      <Carousel></Carousel>
+      <Carousel />
 
       <Heading
         level={3}
